[package]
name = "anchor-i11n"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "anchor_i11n"

[dependencies] 
anchor-lang = "^0.29.0"
anchor-i11n-derive = { path = "../anchor-i11n-derive" }

[dev-dependencies]
hex-literal = "0.4.1"
solana-program = "1.18.12"